--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,6 +18,7 @@ pages:
   before_script:
     - export SHELL=/bin/bash  # 添加这一行以设置SHELL变量
     - curl -fsSL https://get.pnpm.io/install.sh | SHELL=bash sh -  # 强制使用bash shell
+    - source /root/.bashrc  # 加载bashrc，使pnpm命令可用
     - pnpm config set store-dir .pnpm-store
 
   # install dependencies and run build script
