--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "ayusummer-dailyNotes",
   "description": "233 daily notes",
+  "author": "233",
   "repository": {
     "type": "git",
     "url": "git@github.com:Ayusummer/DailyNotes.git"
   },
   "license": "MIT",
   "private": true,
-  "packageManager": "pnpm@9.1.0",
+  "packageManager": "pnpm@9.15.0",
   "engines": {
     "node": ">=20"
   },
@@ -16,16 +17,32 @@
     "docs:dev": "vuepress dev docs --port 9211 --host 127.0.0.1",
     "docs:build": "vuepress build docs"
   },
-  "devDependencies": {
-    "@vuepress/bundler-vite": "2.0.0-rc.8",
-    "@vuepress/plugin-feed": "2.0.0-rc.18",
-    "@vuepress/plugin-seo": "2.0.0-rc.18",
-    "@vuepress/plugin-sitemap": "2.0.0-rc.18",
-    "katex": "^0.16.10",
-    "mermaid": "^10.8.0",
-    "vue": "^3.4.21",
-    "vuepress": "2.0.0-rc.8",
+  "dependencies": {
     "vuepress-plugin-search-pro": "2.0.0-rc.27",
-    "vuepress-theme-hope": "2.0.0-rc.27"
+    "katex": "^0.16.10",
+    "@vuepress/plugin-sitemap": "2.0.0-rc.18",
+    "@vuepress/plugin-seo": "2.0.0-rc.18",
+    "@vuepress/bundler-vite": "2.0.0-rc.18",
+    "@vuepress/plugin-append-date": "2.0.0-rc.63",
+    "@vuepress/plugin-cache": "2.0.0-rc.61",
+    "@vuepress/plugin-docsearch": "2.0.0-rc.64",
+    "@vuepress/plugin-feed": "2.0.0-rc.63",
+    "@vuepress/plugin-pwa": "2.0.0-rc.63",
+    "@vuepress/plugin-revealjs": "2.0.0-rc.63",
+    "@waline/client": "3.4.1",
+    "flowchart.ts": "3.0.1",
+    "mathjax-full": "3.2.2",
+    "mermaid": "11.4.1",
+    "reveal.js": "5.1.0",
+    "sass-embedded": "1.82.0",
+    "sass-loader": "16.0.4",
+    "vue": "3.5.13",
+    "vuepress": "2.0.0-rc.18",
+    "vuepress-theme-hope": "2.0.0-rc.61"
+  },
+  "devDependencies": {
+    "cross-env": "7.0.3",
+    "markdownlint-cli2": "0.16.0",
+    "prettier": "3.4.2"
   }
 }
