--- a/package.json
+++ b/package.json
@@ -18,10 +18,6 @@
     "docs:build": "vuepress build docs"
   },
   "dependencies": {
-    "vuepress-plugin-search-pro": "2.0.0-rc.27",
-    "katex": "^0.16.10",
-    "@vuepress/plugin-sitemap": "2.0.0-rc.18",
-    "@vuepress/plugin-seo": "2.0.0-rc.18",
     "@vuepress/bundler-vite": "2.0.0-rc.18",
     "@vuepress/plugin-append-date": "2.0.0-rc.63",
     "@vuepress/plugin-cache": "2.0.0-rc.61",
@@ -29,10 +25,13 @@
     "@vuepress/plugin-feed": "2.0.0-rc.63",
     "@vuepress/plugin-pwa": "2.0.0-rc.63",
     "@vuepress/plugin-revealjs": "2.0.0-rc.63",
+    "@vuepress/plugin-seo": "2.0.0-rc.61",
+    "@vuepress/plugin-sitemap": "2.0.0-rc.61",
+    "@vuepress/plugin-slimsearch": "2.0.0-rc.63",
     "@waline/client": "3.4.1",
     "flowchart.ts": "3.0.1",
+    "katex": "^0.16.10",
     "mathjax-full": "3.2.2",
-    "mermaid": "11.4.1",
     "reveal.js": "5.1.0",
     "sass-embedded": "1.82.0",
     "sass-loader": "16.0.4",
@@ -43,6 +42,7 @@
   "devDependencies": {
     "cross-env": "7.0.3",
     "markdownlint-cli2": "0.16.0",
+    "mermaid": "11.4.1",
     "prettier": "3.4.2"
   }
 }
